// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when window.connect is defined Style should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  width: var(--ac-widget-send-button-size,32px);
  height: var(--ac-widget-send-button-size,32px);
  border-radius: 50%;
  cursor: default;
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
  background-color: var(--ac-widget-send-button-bg,#EDEDED);
}

.c7>svg {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  fill: var(--ac-widget-send-button-icon-color,#FFFFFF);
}

.c0 {
  margin: 0;
  padding: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background: var(--ac-widget-composer-background,#FFFFFF);
  border: var(--ac-widget-composer-border,1px solid #CCCCCC);
  border-radius: var(--ac-widget-composer-border-radius,24px);
  margin: var(--ac-widget-composer-margin,8px 16px 16px);
}

.c6 {
  position: absolute;
  top: 50%;
  right: var(--ac-widget-composer-send-button-offset,10px);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 2;
}

.c2 {
  cursor: pointer;
  height: auto;
  vertical-align: top;
}

.c2 button {
  height: 100%;
  width: 100%;
}

.c2 label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  font-size: 0;
  height: 100%;
  padding-left: 6px;
  padding-right: 6px;
  margin-bottom: 0;
}

.c2 input {
  display: none;
}

.c2 + [role="textbox"] {
  padding-left: 0;
}

.c3 {
  background-color: transparent;
  border: 1px solid transparent;
  position: relative;
  padding: 0;
  margin: 0;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  word-break: break-word;
  font-family: inherit;
  padding: 10px;
  padding-left: 0;
  padding-right: var(--ac-widget-composer-send-button-clearance,44px);
  margin-left: 14px;
  background: transparent;
  max-height: 80px;
  line-height: 1.5rem;
  overflow: auto;
  min-height: 39px;
  z-index: 2;
  resize: none;
  font-size: var(--ac-widget-composer-fontsize,var(--ac-widget-global-fontsize,16px));
  border: none;
}

.c5::-webkit-input-placeholder {
  color: #666666;
}

.c5::-moz-placeholder {
  color: #666666;
}

.c5:-ms-input-placeholder {
  color: #666666;
}

.c5::placeholder {
  color: #666666;
}

.c5:focus::-webkit-input-placeholder {
  color: transparent;
}

.c5:focus::-moz-placeholder {
  color: transparent;
}

.c5:focus:-ms-input-placeholder {
  color: transparent;
}

.c5:focus::placeholder {
  color: transparent;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0;
}

.c4 svg {
  width: 24px;
  height: 24px;
}

@media (max-width:360px) {
  .c1 {
    margin: var(--ac-widget-composer-margin-small,8px 10px 10px);
  }
}

<div>
      <div
        class="c0 composer"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            data-testid="customer-chat-attachment-icon"
            tabindex="0"
          >
            <button
              aria-label="Attach a file"
              class="c3"
            >
              <label
                for="customer-chat-file-select-12344"
              >
                <div
                  class="c4"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                    />
                  </svg>
                </div>
                <input
                  accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                  aria-label="Attach a file"
                  data-testid="customer-chat-file-select"
                  id="customer-chat-file-select-12344"
                  tabindex="-1"
                  type="file"
                />
              </label>
            </button>
          </div>
          <textarea
            aria-label="Type a message"
            class="c5"
            data-testid="customer-chat-text-input"
            placeholder="Type a message"
            spellcheck="true"
            tabindex="0"
          />
          <div
            class="c6"
          >
            <div
              aria-label="Send Message"
              class="c7"
              data-testid="customer-chat-send-message-button"
              tabindex="0"
            >
              <svg
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-kGXeez bsulgI composer"
    >
      <div
        class="sc-kpOJdX iarBOT"
      >
        <div
          class="sc-ckVGcZ bSJpNg"
          data-testid="customer-chat-attachment-icon"
          tabindex="0"
        >
          <button
            aria-label="Attach a file"
            class="sc-jKJlTe iesImO"
          >
            <label
              for="customer-chat-file-select-12344"
            >
              <div
                class="sc-kEYyzF gxVqSG"
              >
                <svg
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                  />
                </svg>
              </div>
              <input
                accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                aria-label="Attach a file"
                data-testid="customer-chat-file-select"
                id="customer-chat-file-select-12344"
                tabindex="-1"
                type="file"
              />
            </label>
          </button>
        </div>
        <textarea
          aria-label="Type a message"
          class="sc-hMqMXs iMgfus"
          data-testid="customer-chat-text-input"
          placeholder="Type a message"
          spellcheck="true"
          tabindex="0"
        />
        <div
          class="sc-dxgOiQ jTrBKs"
        >
          <div
            aria-label="Send Message"
            class="sc-bdVaJa dJQglV"
            data-testid="customer-chat-send-message-button"
            tabindex="0"
          >
            <svg
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`when window.connect is not defined Style should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  width: var(--ac-widget-send-button-size,32px);
  height: var(--ac-widget-send-button-size,32px);
  border-radius: 50%;
  cursor: default;
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
  background-color: var(--ac-widget-send-button-bg,#EDEDED);
}

.c7>svg {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  fill: var(--ac-widget-send-button-icon-color,#FFFFFF);
}

.c0 {
  margin: 0;
  padding: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background: var(--ac-widget-composer-background,#FFFFFF);
  border: var(--ac-widget-composer-border,1px solid #CCCCCC);
  border-radius: var(--ac-widget-composer-border-radius,24px);
  margin: var(--ac-widget-composer-margin,8px 16px 16px);
}

.c6 {
  position: absolute;
  top: 50%;
  right: var(--ac-widget-composer-send-button-offset,10px);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 2;
}

.c2 {
  cursor: pointer;
  height: auto;
  vertical-align: top;
}

.c2 button {
  height: 100%;
  width: 100%;
}

.c2 label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  font-size: 0;
  height: 100%;
  padding-left: 6px;
  padding-right: 6px;
  margin-bottom: 0;
}

.c2 input {
  display: none;
}

.c2 + [role="textbox"] {
  padding-left: 0;
}

.c3 {
  background-color: transparent;
  border: 1px solid transparent;
  position: relative;
  padding: 0;
  margin: 0;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  word-break: break-word;
  font-family: inherit;
  padding: 10px;
  padding-left: 0;
  padding-right: var(--ac-widget-composer-send-button-clearance,44px);
  margin-left: 14px;
  background: transparent;
  max-height: 80px;
  line-height: 1.5rem;
  overflow: auto;
  min-height: 39px;
  z-index: 2;
  resize: none;
  font-size: var(--ac-widget-composer-fontsize,var(--ac-widget-global-fontsize,16px));
  border: none;
}

.c5::-webkit-input-placeholder {
  color: #666666;
}

.c5::-moz-placeholder {
  color: #666666;
}

.c5:-ms-input-placeholder {
  color: #666666;
}

.c5::placeholder {
  color: #666666;
}

.c5:focus::-webkit-input-placeholder {
  color: transparent;
}

.c5:focus::-moz-placeholder {
  color: transparent;
}

.c5:focus:-ms-input-placeholder {
  color: transparent;
}

.c5:focus::placeholder {
  color: transparent;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0;
}

.c4 svg {
  width: 24px;
  height: 24px;
}

@media (max-width:360px) {
  .c1 {
    margin: var(--ac-widget-composer-margin-small,8px 10px 10px);
  }
}

<body>
    <div>
      <div
        class="c0 composer"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            data-testid="customer-chat-attachment-icon"
            tabindex="0"
          >
            <button
              aria-label="Attach a file"
              class="c3"
            >
              <label
                for="customer-chat-file-select-12344"
              >
                <div
                  class="c4"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                    />
                  </svg>
                </div>
                <input
                  accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                  aria-label="Attach a file"
                  data-testid="customer-chat-file-select"
                  id="customer-chat-file-select-12344"
                  tabindex="-1"
                  type="file"
                />
              </label>
            </button>
          </div>
          <textarea
            aria-label="Type a message"
            class="c5"
            data-testid="customer-chat-text-input"
            placeholder="Type a message"
            spellcheck="true"
            tabindex="0"
          />
          <div
            class="c6"
          >
            <div
              aria-label="Send Message"
              class="c7"
              data-testid="customer-chat-send-message-button"
              tabindex="0"
            >
              <svg
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-kGXeez bsulgI composer"
    >
      <div
        class="sc-kpOJdX iarBOT"
      >
        <div
          class="sc-ckVGcZ bSJpNg"
          data-testid="customer-chat-attachment-icon"
          tabindex="0"
        >
          <button
            aria-label="Attach a file"
            class="sc-jKJlTe iesImO"
          >
            <label
              for="customer-chat-file-select-12344"
            >
              <div
                class="sc-kEYyzF gxVqSG"
              >
                <svg
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                  />
                </svg>
              </div>
              <input
                accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                aria-label="Attach a file"
                data-testid="customer-chat-file-select"
                id="customer-chat-file-select-12344"
                tabindex="-1"
                type="file"
              />
            </label>
          </button>
        </div>
        <textarea
          aria-label="Type a message"
          class="sc-hMqMXs iMgfus"
          data-testid="customer-chat-text-input"
          placeholder="Type a message"
          spellcheck="true"
          tabindex="0"
        />
        <div
          class="sc-dxgOiQ jTrBKs"
        >
          <div
            aria-label="Send Message"
            class="sc-bdVaJa dJQglV"
            data-testid="customer-chat-send-message-button"
            tabindex="0"
          >
            <svg
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
